[SPARK-YARN-CLIENT] Replace stub AM with real Spark word-count integration test
Replace TestApplicationMaster (fake stub) with SimpleSparkApp — a real Spark
word-count application that exercises the full YARN cluster submission path:
MiniDFSCluster + MiniYARNCluster → Spark ApplicationMaster → executor container
→ task execution → HDFS output verification.

Key fixes to SparkYarnSubmitter required to make real Spark work:
- Set SPARK_YARN_STAGING_DIR env var in the AM container (ApplicationMaster.scala
  reads this at line 225; omitting it caused an immediate NPE / exit code 13).
- Inject --add-opens JVM flags for Java 9+ clusters; Spark's storage and network
  layers access internal JDK APIs (sun.nio.ch.DirectBuffer etc.) that require
  explicit module opens on Java 9+.

New SparkYarnConfig.addJava9ModuleOpens(boolean) flag (default true) lets callers
explicitly control whether --add-opens are emitted. Set false for Java 8 clusters
where those flags are unrecognised and would crash the JVM on startup.

New test 9 (cross-version): submits via a Java 8-javaHome client with
addJava9ModuleOpens=false, reads the generated launch_container.sh, and asserts
the AM command uses the Java 8 executable and contains no --add-opens flags.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>